# deep-learning-practice

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
experiments/L001_linear_regression/: notes.md  run_001_baseline.md
experiments/L001_linear_regression/outputs/: results1.txt
experiments/L002_softmax_cross_entropy/: notes.md  run_001_manual_logits.md  run_002_batch_and_logits_input.md  run_003_minimal_classifier.md
notes/: L001_线性回归与训练闭环.md  L002_softmax_与交叉熵.md
prompts/: experiment_review.md  learning_coach.md  notion_summary.md
src/deep_learning_practice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dl_practice/: __init__.py  datasets.py  models.py  softmax_cross_entropy.py  train.py
templates/: experiment_run.md  learning_note.md
tests/: test_training_smoke.py
