[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-learning-practice"
version = "0.1.0"
description = "Code-first deep learning practice workspace."
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
  "matplotlib",
  "scikit-learn",
]

[project.optional-dependencies]
dev = [
  "jupyter",
  "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
